--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==4.1.0
 atomicwrites==1.3.0
 attrs==18.2.0
 Click==7.0
+coverage==4.5.2
 Flask==1.0.2
 itsdangerous==1.1.0
 Jinja2==2.10
@@ -10,6 +11,7 @@ more-itertools==5.0.0
 pluggy==0.8.1
 py==1.7.0
 pytest==4.2.0
+pytest-cov==2.6.1
 pytz==2018.9
 six==1.12.0
 Werkzeug==0.14.1
