--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ psycopg2==2.7.7
 psycopg2-binary==2.7.7
 py==1.7.0
 pycodestyle==2.5.0
+PyJWT==1.7.1
 pytest==4.2.0
 pytest-cov==2.6.1
 python-dotenv==0.10.1
